Partial backport to java 11 (draft)