@@ -1,8 +1,5 @@
 package org.asamk.signal.manager;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.IOException;
 import java.net.URI;
 import java.util.ArrayList;
@@ -14,6 +11,10 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 class MultiAccountManagerImpl implements MultiAccountManager {
 
@@ -34,7 +35,7 @@ class MultiAccountManagerImpl implements MultiAccountManager {
     @Override
     public List<String> getAccountNumbers() {
         synchronized (managers) {
-            return managers.stream().map(Manager::getSelfNumber).toList();
+            return managers.stream().map(Manager::getSelfNumber).collect(Collectors.toList());
         }
     }
 
