@@ -1,5 +1,9 @@
 package org.asamk.signal.manager.helper;
 
+import java.io.IOException;
+import java.util.HashSet;
+import java.util.stream.Collectors;
+
 import org.asamk.signal.manager.SignalDependencies;
 import org.asamk.signal.manager.api.InvalidStickerException;
 import org.asamk.signal.manager.api.StickerPackId;
@@ -10,9 +14,6 @@ import org.signal.libsignal.protocol.InvalidMessageException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.whispersystems.signalservice.internal.util.Hex;
-
-import java.io.IOException;
-import java.util.HashSet;
 
 public class StickerHelper {
 
@@ -28,9 +29,8 @@ public class StickerHelper {
         this.context = context;
     }
 
-    public JsonStickerPack getOrRetrieveStickerPack(
-            StickerPackId packId, byte[] packKey
-    ) throws InvalidStickerException {
+    public JsonStickerPack getOrRetrieveStickerPack(StickerPackId packId, byte[] packKey)
+            throws InvalidStickerException {
         if (!context.getStickerPackStore().existsStickerPack(packId)) {
             try {
                 retrieveStickerPack(packId, packKey);
@@ -69,18 +69,11 @@ public class StickerHelper {
         final var jsonManifest = new JsonStickerPack(manifest.getTitle().orElse(null),
                 manifest.getAuthor().orElse(null),
                 manifest.getCover()
-                        .map(c -> new JsonStickerPack.JsonSticker(c.getId(),
-                                c.getEmoji(),
-                                String.valueOf(c.getId()),
+                        .map(c -> new JsonStickerPack.JsonSticker(c.getId(), c.getEmoji(), String.valueOf(c.getId()),
                                 c.getContentType()))
                         .orElse(null),
-                manifest.getStickers()
-                        .stream()
-                        .map(c -> new JsonStickerPack.JsonSticker(c.getId(),
-                                c.getEmoji(),
-                                String.valueOf(c.getId()),
-                                c.getContentType()))
-                        .toList());
+                manifest.getStickers().stream().map(c -> new JsonStickerPack.JsonSticker(c.getId(), c.getEmoji(),
+                        String.valueOf(c.getId()), c.getContentType())).collect(Collectors.toList()));
         context.getStickerPackStore().storeManifest(packId, jsonManifest);
     }
 }
