@@ -1,17 +1,5 @@
 package org.asamk.signal.manager.storage.accounts;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import org.asamk.signal.manager.api.Pair;
-import org.asamk.signal.manager.config.ServiceEnvironment;
-import org.asamk.signal.manager.storage.SignalAccount;
-import org.asamk.signal.manager.storage.Utils;
-import org.asamk.signal.manager.util.IOUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.whispersystems.signalservice.api.push.ACI;
-import org.whispersystems.signalservice.api.util.PhoneNumberFormatter;
-
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -29,6 +17,18 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.asamk.signal.manager.api.Pair;
+import org.asamk.signal.manager.config.ServiceEnvironment;
+import org.asamk.signal.manager.storage.SignalAccount;
+import org.asamk.signal.manager.storage.Utils;
+import org.asamk.signal.manager.util.IOUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.whispersystems.signalservice.api.push.ACI;
+import org.whispersystems.signalservice.api.util.PhoneNumberFormatter;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 public class AccountsStore {
 
     private static final int MINIMUM_STORAGE_VERSION = 1;
@@ -40,9 +40,8 @@ public class AccountsStore {
     private final String serviceEnvironment;
     private final AccountLoader accountLoader;
 
-    public AccountsStore(
-            final File dataPath, final ServiceEnvironment serviceEnvironment, final AccountLoader accountLoader
-    ) throws IOException {
+    public AccountsStore(final File dataPath, final ServiceEnvironment serviceEnvironment,
+            final AccountLoader accountLoader) throws IOException {
         this.dataPath = dataPath;
         this.serviceEnvironment = getServiceEnvironmentString(serviceEnvironment);
         this.accountLoader = accountLoader;
@@ -52,98 +51,80 @@ public class AccountsStore {
     }
 
     public synchronized Set<String> getAllNumbers() throws IOException {
-        return readAccounts().stream()
-                .map(AccountsStorage.Account::number)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
+        return readAccounts().stream().map(a -> a.number).filter(Objects::nonNull).collect(Collectors.toSet());
     }
 
     public synchronized Set<AccountsStorage.Account> getAllAccounts() throws IOException {
-        return readAccounts().stream()
-                .filter(a -> a.environment() == null || serviceEnvironment.equals(a.environment()))
-                .filter(a -> a.number() != null)
-                .collect(Collectors.toSet());
+        return readAccounts().stream().filter(a -> a.environment == null || serviceEnvironment.equals(a.environment))
+                .filter(a -> a.number != null).collect(Collectors.toSet());
     }
 
     public synchronized String getPathByNumber(String number) throws IOException {
-        return readAccounts().stream()
-                .filter(a -> a.environment() == null || serviceEnvironment.equals(a.environment()))
-                .filter(a -> number.equals(a.number()))
-                .map(AccountsStorage.Account::path)
-                .findFirst()
-                .orElse(null);
+        return readAccounts().stream().filter(a -> a.environment == null || serviceEnvironment.equals(a.environment))
+                .filter(a -> number.equals(a.number)).map(a -> a.path).findFirst().orElse(null);
     }
 
     public synchronized String getPathByAci(ACI aci) throws IOException {
-        return readAccounts().stream()
-                .filter(a -> a.environment() == null || serviceEnvironment.equals(a.environment()))
-                .filter(a -> aci.toString().equals(a.uuid()))
-                .map(AccountsStorage.Account::path)
-                .findFirst()
-                .orElse(null);
+        return readAccounts().stream().filter(a -> a.environment == null || serviceEnvironment.equals(a.environment))
+                .filter(a -> aci.toString().equals(a.uuid)).map(a -> a.path).findFirst().orElse(null);
     }
 
     public synchronized void updateAccount(String path, String number, ACI aci) {
         updateAccounts(accounts -> accounts.stream().map(a -> {
-            if (a.environment() != null && !serviceEnvironment.equals(a.environment())) {
+            if (a.environment != null && !serviceEnvironment.equals(a.environment)) {
                 return a;
             }
 
-            if (path.equals(a.path())) {
-                return new AccountsStorage.Account(a.path(),
-                        serviceEnvironment,
-                        number,
+            if (path.equals(a.path)) {
+                return new AccountsStorage.Account(a.path, serviceEnvironment, number,
                         aci == null ? null : aci.toString());
             }
 
-            if (number != null && number.equals(a.number())) {
-                return new AccountsStorage.Account(a.path(), a.environment(), null, a.uuid());
+            if (number != null && number.equals(a.number)) {
+                return new AccountsStorage.Account(a.path, a.environment, null, a.uuid);
             }
             if (aci != null && aci.toString().equals(a.toString())) {
-                return new AccountsStorage.Account(a.path(), a.environment(), a.number(), null);
+                return new AccountsStorage.Account(a.path, a.environment, a.number, null);
             }
 
             return a;
-        }).toList());
+        }).collect(Collectors.toList()));
     }
 
     public synchronized String addAccount(String number, ACI aci) {
         final var accountPath = generateNewAccountPath();
-        final var account = new AccountsStorage.Account(accountPath,
-                serviceEnvironment,
-                number,
+        final var account = new AccountsStorage.Account(accountPath, serviceEnvironment, number,
                 aci == null ? null : aci.toString());
         updateAccounts(accounts -> {
             final var existingAccounts = accounts.stream().map(a -> {
-                if (a.environment() != null && !serviceEnvironment.equals(a.environment())) {
+                if (a.environment != null && !serviceEnvironment.equals(a.environment)) {
                     return a;
                 }
 
-                if (number != null && number.equals(a.number())) {
-                    return new AccountsStorage.Account(a.path(), a.environment(), null, a.uuid());
+                if (number != null && number.equals(a.number)) {
+                    return new AccountsStorage.Account(a.path, a.environment, null, a.uuid);
                 }
-                if (aci != null && aci.toString().equals(a.uuid())) {
-                    return new AccountsStorage.Account(a.path(), a.environment(), a.number(), null);
+                if (aci != null && aci.toString().equals(a.uuid)) {
+                    return new AccountsStorage.Account(a.path, a.environment, a.number, null);
                 }
 
                 return a;
             });
-            return Stream.concat(existingAccounts, Stream.of(account)).toList();
+            return Stream.concat(existingAccounts, Stream.of(account)).collect(Collectors.toList());
         });
         return accountPath;
     }
 
     public void removeAccount(final String accountPath) {
-        updateAccounts(accounts -> accounts.stream().filter(a -> !(
-                (a.environment() == null || serviceEnvironment.equals(a.environment())) && a.path().equals(accountPath)
-        )).toList());
+        updateAccounts(accounts -> accounts.stream()
+                .filter(a -> !((a.environment == null || serviceEnvironment.equals(a.environment))
+                        && a.path.equals(accountPath)))
+                .collect(Collectors.toList()));
     }
 
     private String generateNewAccountPath() {
-        return new Random().ints(100000, 1000000)
-                .mapToObj(String::valueOf)
-                .filter(n -> !new File(dataPath, n).exists() && !new File(dataPath, n + ".d").exists())
-                .findFirst()
+        return new Random().ints(100000, 1000000).mapToObj(String::valueOf)
+                .filter(n -> !new File(dataPath, n).exists() && !new File(dataPath, n + ".d").exists()).findFirst()
                 .get();
     }
 
@@ -154,8 +135,8 @@ public class AccountsStore {
     private void createInitialAccounts() throws IOException {
         final var legacyAccountPaths = getLegacyAccountPaths();
         final var accountsStorage = new AccountsStorage(legacyAccountPaths.stream()
-                .map(number -> new AccountsStorage.Account(number, null, number, null))
-                .toList(), CURRENT_STORAGE_VERSION);
+                .map(number -> new AccountsStorage.Account(number, null, number, null)).collect(Collectors.toList()),
+                CURRENT_STORAGE_VERSION);
 
         IOUtils.createPrivateDirectories(dataPath);
         var fileName = getAccountsFile();
@@ -164,7 +145,7 @@ public class AccountsStore {
         }
 
         final var pair = openFileChannel(getAccountsFile());
-        try (final var fileChannel = pair.first(); final var lock = pair.second()) {
+        try (final var fileChannel = pair.first; final var lock = pair.second) {
             saveAccountsLocked(fileChannel, accountsStorage);
         }
     }
@@ -176,52 +157,46 @@ public class AccountsStore {
             return Set.of();
         }
 
-        return Arrays.stream(files)
-                .filter(File::isFile)
-                .map(File::getName)
-                .filter(file -> PhoneNumberFormatter.isValidNumber(file, null))
-                .collect(Collectors.toSet());
+        return Arrays.stream(files).filter(File::isFile).map(File::getName)
+                .filter(file -> PhoneNumberFormatter.isValidNumber(file, null)).collect(Collectors.toSet());
     }
 
     private List<AccountsStorage.Account> readAccounts() throws IOException {
         final var pair = openFileChannel(getAccountsFile());
-        try (final var fileChannel = pair.first(); final var lock = pair.second()) {
+        try (final var fileChannel = pair.first; final var lock = pair.second) {
             final var storage = readAccountsLocked(fileChannel);
 
-            var accountsVersion = storage.version() == null ? 1 : storage.version();
+            var accountsVersion = storage.version == null ? 1 : storage.version;
             if (accountsVersion > CURRENT_STORAGE_VERSION) {
                 throw new IOException("Accounts file was created by a more recent version: " + accountsVersion);
             } else if (accountsVersion < MINIMUM_STORAGE_VERSION) {
-                throw new IOException("Accounts file was created by a no longer supported older version: "
-                        + accountsVersion);
+                throw new IOException(
+                        "Accounts file was created by a no longer supported older version: " + accountsVersion);
             } else if (accountsVersion < CURRENT_STORAGE_VERSION) {
-                return upgradeAccountsFile(fileChannel, storage, accountsVersion).accounts();
+                return upgradeAccountsFile(fileChannel, storage, accountsVersion).accounts;
             }
-            return storage.accounts();
+            return storage.accounts;
         }
     }
 
-    private AccountsStorage upgradeAccountsFile(
-            final FileChannel fileChannel, final AccountsStorage storage, final int accountsVersion
-    ) {
+    private AccountsStorage upgradeAccountsFile(final FileChannel fileChannel, final AccountsStorage storage,
+            final int accountsVersion) {
         try {
-            List<AccountsStorage.Account> newAccounts = storage.accounts();
+            List<AccountsStorage.Account> newAccounts = storage.accounts;
             if (accountsVersion < 2) {
                 // add environment field
                 newAccounts = newAccounts.stream().map(a -> {
-                    if (a.environment() != null) {
+                    if (a.environment != null) {
                         return a;
                     }
-                    try (final var account = accountLoader.loadAccountOrNull(a.path())) {
+                    try (final var account = accountLoader.loadAccountOrNull(a.path)) {
                         if (account == null || account.getServiceEnvironment() == null) {
                             return a;
                         }
-                        return new AccountsStorage.Account(a.path(),
-                                getServiceEnvironmentString(account.getServiceEnvironment()),
-                                a.number(),
-                                a.uuid());
+                        return new AccountsStorage.Account(a.path,
+                                getServiceEnvironmentString(account.getServiceEnvironment()), a.number, a.uuid);
                     }
-                }).toList();
+                }).collect(Collectors.toList());
             }
             final var newStorage = new AccountsStorage(newAccounts, CURRENT_STORAGE_VERSION);
             saveAccountsLocked(fileChannel, newStorage);
@@ -235,9 +210,9 @@ public class AccountsStore {
     private void updateAccounts(Function<List<AccountsStorage.Account>, List<AccountsStorage.Account>> updater) {
         try {
             final var pair = openFileChannel(getAccountsFile());
-            try (final var fileChannel = pair.first(); final var lock = pair.second()) {
+            try (final var fileChannel = pair.first; final var lock = pair.second) {
                 final var accountsStorage = readAccountsLocked(fileChannel);
-                final var newAccountsStorage = updater.apply(accountsStorage.accounts());
+                final var newAccountsStorage = updater.apply(accountsStorage.accounts);
                 saveAccountsLocked(fileChannel, new AccountsStorage(newAccountsStorage, CURRENT_STORAGE_VERSION));
             }
         } catch (IOException e) {
@@ -279,10 +254,13 @@ public class AccountsStore {
     }
 
     private String getServiceEnvironmentString(final ServiceEnvironment serviceEnvironment) {
-        return switch (serviceEnvironment) {
-            case LIVE -> "LIVE";
-            case STAGING -> "STAGING";
-        };
+        switch (serviceEnvironment) {
+            case LIVE:
+                return "LIVE";
+            case STAGING:
+                return "STAGING";
+        }
+        return "LIVE";
     }
 
     public interface AccountLoader {
