@@ -1,5 +1,12 @@
 package org.asamk.signal.manager.storage.identities;
 
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.asamk.signal.manager.api.TrustLevel;
 import org.asamk.signal.manager.storage.Database;
 import org.asamk.signal.manager.storage.Utils;
@@ -9,12 +16,6 @@ import org.signal.libsignal.protocol.state.IdentityKeyStore.Direction;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.whispersystems.signalservice.api.push.ServiceId;
-
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.Collection;
-import java.util.List;
 
 import io.reactivex.rxjava3.core.Observable;
 import io.reactivex.rxjava3.subjects.PublishSubject;
@@ -32,15 +33,12 @@ public class IdentityKeyStore {
     public static void createSql(Connection connection) throws SQLException {
         // When modifying the CREATE statement here, also add a migration in AccountDatabase.java
         try (final var statement = connection.createStatement()) {
-            statement.executeUpdate("""
-                                    CREATE TABLE identity (
-                                      _id INTEGER PRIMARY KEY,
-                                      uuid BLOB UNIQUE NOT NULL,
-                                      identity_key BLOB NOT NULL,
-                                      added_timestamp INTEGER NOT NULL,
-                                      trust_level INTEGER NOT NULL
-                                    ) STRICT;
-                                    """);
+            statement.executeUpdate("                    CREATE TABLE identity (\n"
+                    + "                      _id INTEGER PRIMARY KEY,\n"
+                    + "                      uuid BLOB UNIQUE NOT NULL,\n"
+                    + "                      identity_key BLOB NOT NULL,\n"
+                    + "                      added_timestamp INTEGER NOT NULL,\n"
+                    + "                      trust_level INTEGER NOT NULL\n" + "                    ) STRICT;\n" + "");
         }
     }
 
@@ -93,9 +91,7 @@ public class IdentityKeyStore {
             }
 
             logger.debug("Updating trust level for recipient {} with trust {}", serviceId, trustLevel);
-            final var newIdentityInfo = new IdentityInfo(serviceId,
-                    identityKey,
-                    trustLevel,
+            final var newIdentityInfo = new IdentityInfo(serviceId, identityKey, trustLevel,
                     identityInfo.getDateAddedTimestamp());
             storeIdentity(connection, newIdentityInfo);
             return true;
@@ -146,14 +142,12 @@ public class IdentityKeyStore {
 
     public List<IdentityInfo> getIdentities() {
         try (final var connection = database.getConnection()) {
-            final var sql = (
-                    """
-                    SELECT i.uuid, i.identity_key, i.added_timestamp, i.trust_level
-                    FROM %s AS i
-                    """
-            ).formatted(TABLE_IDENTITY);
+            final var sql = String
+                    .format("                    SELECT i.uuid, i.identity_key, i.added_timestamp, i.trust_level\n"
+                            + "                    FROM %s AS i\n", TABLE_IDENTITY);
             try (final var statement = connection.prepareStatement(sql)) {
-                return Utils.executeQueryForStream(statement, this::getIdentityInfoFromResultSet).toList();
+                return Utils.executeQueryForStream(statement, this::getIdentityInfoFromResultSet)
+                        .collect(Collectors.toList());
             }
         } catch (SQLException e) {
             throw new RuntimeException("Failed read from identity store", e);
@@ -183,31 +177,21 @@ public class IdentityKeyStore {
         logger.debug("Complete identities migration took {}ms", (System.nanoTime() - start) / 1000000);
     }
 
-    private IdentityInfo loadIdentity(
-            final Connection connection, final ServiceId serviceId
-    ) throws SQLException {
-        final var sql = (
-                """
-                SELECT i.uuid, i.identity_key, i.added_timestamp, i.trust_level
-                FROM %s AS i
-                WHERE i.uuid = ?
-                """
-        ).formatted(TABLE_IDENTITY);
+    private IdentityInfo loadIdentity(final Connection connection, final ServiceId serviceId) throws SQLException {
+        final var sql = String
+                .format("                SELECT i.uuid, i.identity_key, i.added_timestamp, i.trust_level\n"
+                        + "                FROM %s AS i\n" + "                WHERE i.uuid = ?\n", TABLE_IDENTITY);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setBytes(1, serviceId.toByteArray());
             return Utils.executeQueryForOptional(statement, this::getIdentityInfoFromResultSet).orElse(null);
         }
     }
 
-    private void saveNewIdentity(
-            final Connection connection,
-            final ServiceId serviceId,
-            final IdentityKey identityKey,
-            final boolean firstIdentity
-    ) throws SQLException {
-        final var trustLevel = trustNewIdentity == TrustNewIdentity.ALWAYS || (
-                trustNewIdentity == TrustNewIdentity.ON_FIRST_USE && firstIdentity
-        ) ? TrustLevel.TRUSTED_UNVERIFIED : TrustLevel.UNTRUSTED;
+    private void saveNewIdentity(final Connection connection, final ServiceId serviceId, final IdentityKey identityKey,
+            final boolean firstIdentity) throws SQLException {
+        final var trustLevel = trustNewIdentity == TrustNewIdentity.ALWAYS
+                || (trustNewIdentity == TrustNewIdentity.ON_FIRST_USE && firstIdentity) ? TrustLevel.TRUSTED_UNVERIFIED
+                        : TrustLevel.UNTRUSTED;
         logger.debug("Storing new identity for recipient {} with trust {}", serviceId, trustLevel);
         final var newIdentityInfo = new IdentityInfo(serviceId, identityKey, trustLevel, System.currentTimeMillis());
         storeIdentity(connection, newIdentityInfo);
@@ -215,16 +199,11 @@ public class IdentityKeyStore {
     }
 
     private void storeIdentity(final Connection connection, final IdentityInfo identityInfo) throws SQLException {
-        logger.trace("Storing identity info for {}, trust: {}, added: {}",
-                identityInfo.getServiceId(),
-                identityInfo.getTrustLevel(),
-                identityInfo.getDateAddedTimestamp());
-        final var sql = (
-                """
-                INSERT OR REPLACE INTO %s (uuid, identity_key, added_timestamp, trust_level)
-                VALUES (?, ?, ?, ?)
-                """
-        ).formatted(TABLE_IDENTITY);
+        logger.trace("Storing identity info for {}, trust: {}, added: {}", identityInfo.getServiceId(),
+                identityInfo.getTrustLevel(), identityInfo.getDateAddedTimestamp());
+        final var sql = String
+                .format("                INSERT OR REPLACE INTO %s (uuid, identity_key, added_timestamp, trust_level)\n"
+                        + "                VALUES (?, ?, ?, ?)\n", TABLE_IDENTITY);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setBytes(1, identityInfo.getServiceId().toByteArray());
             statement.setBytes(2, identityInfo.getIdentityKey().serialize());
@@ -235,12 +214,8 @@ public class IdentityKeyStore {
     }
 
     private void deleteIdentity(final Connection connection, final ServiceId serviceId) throws SQLException {
-        final var sql = (
-                """
-                DELETE FROM %s AS i
-                WHERE i.uuid = ?
-                """
-        ).formatted(TABLE_IDENTITY);
+        final var sql = String.format("                DELETE FROM %s AS i\n" + "                WHERE i.uuid = ?\n",
+                TABLE_IDENTITY);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setBytes(1, serviceId.toByteArray());
             statement.executeUpdate();
