@@ -1,14 +1,5 @@
 package org.asamk.signal.manager.storage.senderKeys;
 
-import org.asamk.signal.manager.api.Pair;
-import org.asamk.signal.manager.helper.RecipientAddressResolver;
-import org.asamk.signal.manager.storage.recipients.RecipientId;
-import org.asamk.signal.manager.storage.recipients.RecipientResolver;
-import org.signal.libsignal.protocol.InvalidMessageException;
-import org.signal.libsignal.protocol.groups.state.SenderKeyRecord;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -19,17 +10,23 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
+import org.asamk.signal.manager.api.Pair;
+import org.asamk.signal.manager.helper.RecipientAddressResolver;
+import org.asamk.signal.manager.storage.recipients.RecipientId;
+import org.asamk.signal.manager.storage.recipients.RecipientResolver;
+import org.signal.libsignal.protocol.InvalidMessageException;
+import org.signal.libsignal.protocol.groups.state.SenderKeyRecord;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class LegacySenderKeyRecordStore {
 
     private final static Logger logger = LoggerFactory.getLogger(LegacySenderKeyRecordStore.class);
 
-    public static void migrate(
-            final File senderKeysPath,
-            final RecipientResolver resolver,
-            final RecipientAddressResolver addressResolver,
-            final SenderKeyStore senderKeyStore
-    ) {
+    public static void migrate(final File senderKeysPath, final RecipientResolver resolver,
+            final RecipientAddressResolver addressResolver, final SenderKeyStore senderKeyStore) {
         final var files = senderKeysPath.listFiles();
         if (files == null) {
             return;
@@ -37,12 +34,12 @@ public class LegacySenderKeyRecordStore {
 
         final var senderKeys = parseFileNames(files, resolver).stream().map(key -> {
             final var record = loadSenderKeyLocked(key, senderKeysPath);
-            final var serviceId = addressResolver.resolveRecipientAddress(key.recipientId).serviceId();
+            final var serviceId = addressResolver.resolveRecipientAddress(key.recipientId).serviceId;
             if (record == null || serviceId.isEmpty()) {
                 return null;
             }
             return new Pair<>(new SenderKeyRecordStore.Key(serviceId.get(), key.deviceId, key.distributionId), record);
-        }).filter(Objects::nonNull).toList();
+        }).filter(Objects::nonNull).collect(Collectors.toList());
 
         senderKeyStore.addLegacySenderKeys(senderKeys);
         deleteAllSenderKeys(senderKeysPath);
@@ -71,23 +68,18 @@ public class LegacySenderKeyRecordStore {
     final static Pattern senderKeyFileNamePattern = Pattern.compile("(\\d+)_(\\d+)_([\\da-z\\-]+)");
 
     private static List<Key> parseFileNames(final File[] files, final RecipientResolver resolver) {
-        return Arrays.stream(files)
-                .map(f -> senderKeyFileNamePattern.matcher(f.getName()))
-                .filter(Matcher::matches)
+        return Arrays.stream(files).map(f -> senderKeyFileNamePattern.matcher(f.getName())).filter(Matcher::matches)
                 .map(matcher -> {
                     final var recipientId = resolver.resolveRecipient(Long.parseLong(matcher.group(1)));
                     if (recipientId == null) {
                         return null;
                     }
                     return new Key(recipientId, Integer.parseInt(matcher.group(2)), UUID.fromString(matcher.group(3)));
-                })
-                .filter(Objects::nonNull)
-                .toList();
+                }).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
     private static File getSenderKeyFile(Key key, final File senderKeysPath) {
-        return new File(senderKeysPath,
-                key.recipientId().id() + "_" + key.deviceId() + "_" + key.distributionId().toString());
+        return new File(senderKeysPath, key.recipientId.id + "_" + key.deviceId + "_" + key.distributionId.toString());
     }
 
     private static SenderKeyRecord loadSenderKeyLocked(final Key key, final File senderKeysPath) {
@@ -103,5 +95,17 @@ public class LegacySenderKeyRecordStore {
         }
     }
 
-    record Key(RecipientId recipientId, int deviceId, UUID distributionId) {}
+    static class Key {
+        RecipientId recipientId;
+        int deviceId;
+        UUID distributionId;
+
+        public Key(RecipientId recipientId, int deviceId, UUID distributionId) {
+            super();
+            this.recipientId = recipientId;
+            this.deviceId = deviceId;
+            this.distributionId = distributionId;
+        }
+
+    }
 }
